--- a/.github/workflows/run-dependency-check.yml
+++ b/.github/workflows/run-dependency-check.yml
@@ -67,7 +67,7 @@ jobs:
           SLACK_ICON_EMOJI: ':bot:'
           SLACK_CHANNEL: 'cryptomator-desktop'
           SLACK_TITLE: "Vulnerabilities in ${{ github.event.repository.name }} detected."
-          SLACK_MESSAGE: "Download the <https://github.com/${{ github.repository }}/actions/run/${{ github.run_id }}|report> for more details."
+          SLACK_MESSAGE: "Download the <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|report> for more details."
           SLACK_FOOTER: false
           MSG_MINIMAL: true
       - name: Failing workflow on release branch
